--- a/package.json
+++ b/package.json
@@ -6,77 +6,71 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "latest",
-    "@anthropic-ai/sdk": "latest",
-    "@emotion/is-prop-valid": "latest",
-    "@emotion/react": "latest",
-    "@getbrevo/brevo": "latest",
-    "@heroicons/react": "latest",
+    "@ai-sdk/anthropic": "^0.0.52",
+    "@anthropic-ai/sdk": "^0.27.3",
+    "@getbrevo/brevo": "^2.0.0",
+    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.4",
-    "@intercom/messenger-js-sdk": "latest",
-    "@next/bundle-analyzer": "^14.2.5",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-switch": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-tooltip": "latest",
-    "@supabase/auth-helpers-nextjs": "latest",
-    "@supabase/supabase-js": "latest",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "ai": "latest",
-    "autoprefixer": "^10.4.19",
-    "axios": "latest",
+    "@intercom/messenger-js-sdk": "^0.0.13",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "ai": "^3.0.12",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "latest",
-    "elevenlabs": "latest",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "framer-motion": "latest",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.2",
+    "cmdk": "^0.2.1",
+    "date-fns": "^3.6.0",
+    "elevenlabs": "^0.8.2",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.2.16",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.454.0",
-    "multer": "^1.4.5-lts.1",
     "next": "14.2.16",
-    "pdf-lib": "^1.17.1",
-    "postcss": "^8",
-    "react": "^18",
-    "react-day-picker": "latest",
-    "react-dom": "^18",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.0",
-    "react-hot-toast": "latest",
-    "react-icons": "latest",
-    "react-pdf": "^9.1.0",
+    "postcss": "^8.4.33",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5",
+    "typescript": "^5.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.11",
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-pdf": "^6.2.0",
-    "postcss": "^8.5",
-    "typescript": "^5"
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "postcss": "^8.4.33",
+    "typescript": "^5.3.3"
   }
 }
