--- a/package.json
+++ b/package.json
@@ -1,86 +1,56 @@
 {
-  "name": "my-v0-project",
+  "name": "suitpax-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "latest",
-    "@anthropic-ai/sdk": "latest",
-    "@emotion/is-prop-valid": "latest",
-    "@emotion/react": "latest",
-    "@getbrevo/brevo": "latest",
-    "@heroicons/react": "latest",
-    "@hookform/resolvers": "^3.9.1",
-    "@intercom/messenger-js-sdk": "latest",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-aspect-ratio": "1.1.1",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "1.1.2",
-    "@radix-ui/react-context-menu": "2.2.4",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-hover-card": "1.1.4",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-menubar": "1.1.4",
-    "@radix-ui/react-navigation-menu": "1.2.3",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "1.1.1",
-    "@radix-ui/react-switch": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-toast": "1.2.4",
-    "@radix-ui/react-toggle": "1.1.1",
-    "@radix-ui/react-toggle-group": "1.1.1",
-    "@radix-ui/react-tooltip": "latest",
-    "@supabase/auth-helpers-nextjs": "latest",
-    "@supabase/supabase-js": "latest",
-    "ai": "latest",
-    "autoprefixer": "^10.4.20",
-    "axios": "latest",
-    "class-variance-authority": "^0.7.1",
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@anthropic-ai/sdk": "^0.24.3",
+    "@getbrevo/brevo": "^1.0.1",
+    "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "ai": "^3.3.19",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "latest",
-    "date-fns": "4.1.0",
-    "elevenlabs": "latest",
-    "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
-    "geist": "^1.3.1",
-    "input-otp": "1.4.1",
-    "lucide-react": "^0.454.0",
+    "cmdk": "^1.0.0",
+    "elevenlabs": "^0.6.1",
+    "framer-motion": "^11.9.0",
+    "lucide-react": "^0.447.0",
     "next": "14.2.16",
-    "next-themes": "^0.4.4",
     "react": "^18",
-    "react-day-picker": "latest",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.1",
-    "react-hot-toast": "latest",
-    "react-icons": "latest",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "2.15.0",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-speech-kit": "^3.0.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8.5",
-    "tailwindcss": "^3.4.17",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.16",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
