--- a/package.json
+++ b/package.json
@@ -9,91 +9,91 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "latest",
-    "@anthropic-ai/sdk": "latest",
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@anthropic-ai/sdk": "^0.24.3",
     "@emotion/is-prop-valid": "^1.3.1",
-    "@emotion/react": "latest",
-    "@getbrevo/brevo": "latest",
-    "@heroicons/react": "latest",
+    "@emotion/react": "^11.11.4",
+    "@getbrevo/brevo": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
-    "@intercom/messenger-js-sdk": "latest",
+    "@intercom/messenger-js-sdk": "^0.0.18",
     "@next/bundle-analyzer": "^14.2.16",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-aspect-ratio": "latest",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "latest",
-    "@radix-ui/react-context-menu": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-hover-card": "latest",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-menubar": "latest",
-    "@radix-ui/react-navigation-menu": "latest",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "latest",
-    "@radix-ui/react-switch": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-toast": "latest",
-    "@radix-ui/react-toggle": "latest",
-    "@radix-ui/react-toggle-group": "latest",
-    "@radix-ui/react-tooltip": "latest",
-    "@supabase/auth-helpers-nextjs": "latest",
-    "@supabase/supabase-js": "latest",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "ai": "latest",
+    "ai": "^3.4.9",
     "autoprefixer": "^10.4.20",
-    "axios": "latest",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "latest",
+    "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
-    "elevenlabs": "latest",
-    "embla-carousel-react": "latest",
-    "framer-motion": "latest",
-    "input-otp": "latest",
+    "elevenlabs": "^0.15.3",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^11.11.17",
+    "input-otp": "^1.4.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.454.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.16",
-    "next-themes": "latest",
+    "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
-    "react": "^18",
-    "react-day-picker": "latest",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-day-picker": "^9.3.2",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "latest",
-    "react-hot-toast": "latest",
-    "react-icons": "latest",
+    "react-hook-form": "^7.61.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-pdf": "^9.1.0",
-    "react-resizable-panels": "latest",
+    "react-resizable-panels": "^3.0.4",
     "react-speech-kit": "^3.0.1",
-    "recharts": "latest",
-    "sonner": "latest",
+    "recharts": "^3.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "latest",
-    "zod": "^4.0.0-beta.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11",
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/react-pdf": "^6.2.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.16",
-    "postcss": "^8.5",
+    "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
