--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "suitpax",
+  "name": "suitpax-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start",
-    "type-check": "tsc --noEmit"
+    "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
     "@anthropic-ai/sdk": "latest",
     "@duffel/api": "latest",
     "@emotion/is-prop-valid": "latest",
     "@emotion/react": "latest",
     "@getbrevo/brevo": "latest",
     "@heroicons/react": "latest",
+    "@hookform/resolvers": "^3.9.1",
     "@intercom/messenger-js-sdk": "latest",
-    "@next/third-parties": "^15.1.0",
+    "@next/bundle-analyzer": "^14.2.16",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
     "@radix-ui/react-aspect-ratio": "latest",
@@ -37,7 +38,6 @@
     "@radix-ui/react-scroll-area": "latest",
     "@radix-ui/react-select": "latest",
     "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-sheet": "^1.1.0",
     "@radix-ui/react-slider": "latest",
     "@radix-ui/react-slot": "latest",
     "@radix-ui/react-switch": "latest",
@@ -49,12 +49,10 @@
     "@react-pdf/renderer": "latest",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/sharp": "^0.32.0",
-    "ai": "^4.0.12",
+    "ai": "^3.4.9",
+    "autoprefixer": "^10.4.20",
     "axios": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -65,35 +63,34 @@
     "framer-motion": "latest",
     "html-pdf-node": "^1.0.8",
     "input-otp": "latest",
-    "jspdf": "latest",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "14.2.16",
     "next-themes": "latest",
-    "puppeteer": "^23.9.0",
-    "react": "^19",
+    "puppeteer": "^23.0.0",
+    "react": "^18",
     "react-day-picker": "latest",
-    "react-dom": "^19",
+    "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "latest",
     "react-hot-toast": "latest",
     "react-icons": "latest",
-    "react-markdown": "latest",
     "react-resizable-panels": "latest",
+    "react-speech-kit": "^3.0.1",
     "recharts": "latest",
-    "remark-gfm": "latest",
-    "sharp": "^0.33.5",
+    "sharp": "^0.33.0",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.3",
-    "vaul": "latest"
+    "vaul": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/eslint": "^9.6.1",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/sharp": "^0.32.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "14.2.16",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
