--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "suitpax",
+  "name": "suitpax-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,90 +10,99 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "latest",
-    "@duffel/api": "latest",
-    "@emotion/is-prop-valid": "latest",
-    "@emotion/react": "latest",
-    "@getbrevo/brevo": "latest",
-    "@heroicons/react": "latest",
-    "@intercom/messenger-js-sdk": "latest",
+    "@anthropic-ai/sdk": "^0.32.1",
+    "@duffel/api": "^2.57.0",
+    "@emotion/is-prop-valid": "^1.3.1",
+    "@emotion/react": "^11.13.3",
+    "@getbrevo/brevo": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@intercom/messenger-js-sdk": "^0.0.15",
     "@next/third-parties": "^15.1.0",
-    "@radix-ui/react-accordion": "latest",
-    "@radix-ui/react-alert-dialog": "latest",
-    "@radix-ui/react-aspect-ratio": "latest",
-    "@radix-ui/react-avatar": "latest",
-    "@radix-ui/react-checkbox": "latest",
-    "@radix-ui/react-collapsible": "latest",
-    "@radix-ui/react-context-menu": "latest",
-    "@radix-ui/react-dialog": "latest",
-    "@radix-ui/react-dropdown-menu": "latest",
-    "@radix-ui/react-hover-card": "latest",
-    "@radix-ui/react-label": "latest",
-    "@radix-ui/react-menubar": "latest",
-    "@radix-ui/react-navigation-menu": "latest",
-    "@radix-ui/react-popover": "latest",
-    "@radix-ui/react-progress": "latest",
-    "@radix-ui/react-radio-group": "latest",
-    "@radix-ui/react-scroll-area": "latest",
-    "@radix-ui/react-select": "latest",
-    "@radix-ui/react-separator": "latest",
-    "@radix-ui/react-slider": "latest",
-    "@radix-ui/react-slot": "latest",
-    "@radix-ui/react-switch": "latest",
-    "@radix-ui/react-tabs": "latest",
-    "@radix-ui/react-toast": "latest",
-    "@radix-ui/react-toggle": "latest",
-    "@radix-ui/react-toggle-group": "latest",
-    "@radix-ui/react-tooltip": "latest",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.2",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.5",
     "@react-pdf/renderer": "^4.0.0",
-    "@supabase/auth-helpers-nextjs": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.45.6",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/sharp": "^0.32.0",
     "ai": "^4.0.12",
-    "axios": "latest",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "latest",
+    "cmdk": "^1.0.3",
     "date-fns": "^4.1.0",
-    "elevenlabs": "latest",
-    "embla-carousel-react": "latest",
-    "framer-motion": "latest",
+    "elevenlabs": "^0.18.3",
+    "embla-carousel-react": "^8.5.1",
+    "framer-motion": "^12.0.0",
     "html-pdf-node": "^1.0.8",
-    "input-otp": "latest",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
-    "next-themes": "latest",
-    "puppeteer": "latest",
-    "react": "^19",
-    "react-day-picker": "latest",
-    "react-dom": "^19",
-    "react-hook-form": "latest",
-    "react-hot-toast": "latest",
-    "react-icons": "latest",
-    "react-markdown": "latest",
-    "react-resizable-panels": "latest",
-    "recharts": "latest",
-    "remark-gfm": "latest",
+    "next": "^15.1.0",
+    "next-themes": "^0.4.4",
+    "puppeteer": "^23.10.1",
+    "react": "^18.3.1",
+    "react-day-picker": "^9.4.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.13.3",
+    "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
-    "sonner": "latest",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
-    "vaul": "latest"
+    "vaul": "^1.1.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8.5",
+    "eslint-config-next": "^15.1.0",
+    "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "resolutions": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
