--- a/package.json
+++ b/package.json
@@ -47,11 +47,16 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.45.6",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
+    "@tanstack/react-table": "^8.21.3",
+    "@hookform/resolvers": "^5.1.1",
+    "@types/node": "^24.0.1",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/sharp": "^0.32.0",
-    "ai": "^4.0.12",
+    "@react-google-maps/api": "^2.20.6",
+    "ai": "^4.3.16",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,41 +64,49 @@
     "date-fns": "^4.1.0",
     "elevenlabs": "^0.18.3",
     "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^12.0.0",
+    "framer-motion": "^12.18.1",
     "html-pdf-node": "^1.0.8",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.1.0",
-    "next-themes": "^0.4.4",
+    "next": "15.4.5",
+    "next-themes": "^0.4.6",
+    "next-day-picker": "^9.8.1",
     "puppeteer": "^23.10.1",
-    "react": "^19.1.1",
-    "react-day-picker": "^9.4.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.54.0",
+    "react": "19.1.0",
+    "react-day-picker": "^9.8.1",
+    "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.13.3",
+    "react-use-draggable-scroll": "^0.4.7",
+    "recharts": "^2.15.3",
     "remark-gfm": "^4.0.0",
-    "sharp": "^0.33.5",
+    "sharp": "0.34.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
     "vaul": "^1.1.1",
-    "zod": "^3.24.1"
+    "zod": "3.25.64",
+    "zustand": "^5.0.7",
+    "file-saver": "^2.0.5",
+    "pdfjs-dist": "4.8.69"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^15.1.0",
+    "eslint-config-next": "15.1.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@midday/tsconfig": "workspace:*",
+    "@types/file-saver": "^2.0.7",
+    "@types/papaparse": "^5.3.16",
+    "papaparse": "^5.5.3",
+    "@types/react-dropzone": "^14.1.5"
   },
   "overrides": {},
   "resolutions": {}
