--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@types/node": "^24.0.1",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "@types/sharp": "^0.32.0",
     "@react-google-maps/api": "^2.20.6",
     "ai": "^4.3.16",
     "axios": "^1.7.9",
@@ -63,7 +62,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.3",
     "date-fns": "^4.1.0",
-    "elevenlabs": "^0.18.3",
+    "elevenlabs": "^1.59.0",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^12.18.1",
     "html-pdf-node": "^1.0.8",
@@ -71,7 +70,6 @@
     "lucide-react": "^0.454.0",
     "next": "15.4.5",
     "next-themes": "^0.4.6",
-    "next-day-picker": "^9.8.1",
     "puppeteer": "^23.10.1",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
@@ -104,8 +102,7 @@
     "typescript": "^5.6.3",
     "@types/file-saver": "^2.0.7",
     "@types/papaparse": "^5.3.16",
-    "papaparse": "^5.5.3",
-    "@types/react-dropzone": "^14.1.5"
+    "papaparse": "^5.5.3"
   },
   "overrides": {},
   "resolutions": {}
