--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@anthropic-ai/sdk": "latest",
     "@duffel/api": "latest",
+    "uuid": "^11.1.0",
     "@emotion/is-prop-valid": "latest",
     "@emotion/react": "latest",
     "@getbrevo/brevo": "latest",
