update package to exactly version

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@anthropic-ai/sdk": "latest",
     "@duffel/api": "latest",
+    "@elevenlabs/elevenlabs-js": "^2.8.0",
     "@emotion/is-prop-valid": "latest",
     "@emotion/react": "latest",
     "@getbrevo/brevo": "latest",
@@ -54,8 +55,8 @@
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
     "@react-google-maps/api": "^2.20.6",
-    "@react-pdf/renderer": "^4.0.0",
-    "@supabase/auth-helpers-nextjs": "latest",
+    "@react-pdf/renderer": "^4.3.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "latest",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.84.1",
@@ -66,9 +67,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
-    "crypto": "latest",
     "date-fns": "latest",
-    "elevenlabs": "latest",
     "embla-carousel-react": "latest",
     "file-saver": "^2.0.5",
     "framer-motion": "latest",
@@ -77,6 +76,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "node-latex": "^3.1.0",
     "pdfjs-dist": "4.8.69",
     "puppeteer": "latest",
     "react": "^19",
@@ -107,8 +107,11 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^8.57.1",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.33.0",
     "eslint-config-next": "15.1.0",
+    "eslint-config-typescript": "^3.0.0",
     "papaparse": "^5.5.3",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
