--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@heroicons/react": "2.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@intercom/messenger-js-sdk": "0.0.15",
+    "@marsidev/react-turnstile": "^1.3.0",
     "@next/third-parties": "^15.1.0",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-alert-dialog": "1.1.14",
@@ -60,10 +61,10 @@
     "@radix-ui/react-toggle": "1.1.9",
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/react-tooltip": "1.2.7",
-    "@stripe/react-stripe-js": "^2.6.2",
-    "@stripe/stripe-js": "^3.4.1",
     "@react-google-maps/api": "^2.20.6",
     "@react-pdf/renderer": "^4.3.0",
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.4.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "2.54.0",
     "@tailwindcss/typography": "^0.5.15",
@@ -100,8 +101,8 @@
     "recharts": "3.1.2",
     "remark-gfm": "4.0.1",
     "sharp": "0.34.1",
-    "stripe": "^16.6.0",
     "sonner": "2.0.7",
+    "stripe": "^16.6.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "11.1.0",
